--- a/src/PureActive.Logging/PureActive.Logging.csproj
+++ b/src/PureActive.Logging/PureActive.Logging.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Authors>Steve Bush</Authors>
+    <Company>BushChang</Company>
+    <Description>Logging Extensions</Description>
   </PropertyGroup>
 
 </Project>
