--- a/src/PureActive.Logging/PureActive.Logging.csproj
+++ b/src/PureActive.Logging/PureActive.Logging.csproj
@@ -7,6 +7,12 @@
     <Authors>Steve Bush</Authors>
     <Company>BushChang</Company>
     <Description>Logging Extensions</Description>
+    <PackageLicenseUrl>https://github.com/SteveBush/PureActive/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/SteveBush/PureActive</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/SteveBush/PureActive</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>logging, extensions</PackageTags>
+    <PackageReleaseNotes>PureActive.Logging $BuildVersion$</PackageReleaseNotes>
   </PropertyGroup>
 
 </Project>
