--- a/src/PureActive.Logging/PureActive.Logging.csproj
+++ b/src/PureActive.Logging/PureActive.Logging.csproj
@@ -13,6 +13,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>logging, extensions</PackageTags>
     <PackageReleaseNotes>PureActive.Logging</PackageReleaseNotes>
+    <Copyright>© BushChang Corporation. All rights reserved.</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
