Updated location for PureActive icon

--- a/src/PureActive.Logging/PureActive.Logging.csproj
+++ b/src/PureActive.Logging/PureActive.Logging.csproj
@@ -14,7 +14,7 @@
     <PackageTags>logging, extensions</PackageTags>
     <PackageReleaseNotes>PureActive.Logging</PackageReleaseNotes>
     <Copyright>© BushChang Corporation. All rights reserved.</Copyright>
-    <PackageIconUrl>https://github.com/SteveBush/PureActive/blob/master/art/PureActive.gif</PackageIconUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/SteveBush/PureWebAssets/master/icon/PureActive.gif</PackageIconUrl>
     <Version>1.0.1</Version>
   </PropertyGroup>
 
