--- a/src/PureActive.Logging/PureActive.Logging.csproj
+++ b/src/PureActive.Logging/PureActive.Logging.csproj
@@ -16,8 +16,8 @@
     <Copyright>© BushChang Corporation. All rights reserved.</Copyright>
     <PackageIconUrl>https://raw.githubusercontent.com/SteveBush/PureWebAssets/master/icon/PureActive.gif</PackageIconUrl>
     <Version>1.0.3.0</Version>
+    <PackageOutputPath>$([System.IO.Path]::Combine($(MSBuildProjectDirectory), 'NuGetOutput'))</PackageOutputPath>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
@@ -27,5 +27,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
+  <Target Name="BeforeClean" BeforeTargets="Clean">
+    <RemoveDir Directories="$(PackageOutputPath)"/>
+    <RemoveDir Directories="$(OutDir)"/>
+    <RemoveDir Directories="$(BaseIntermediateOutputPath)"/>
+  </Target>
 
 </Project>
