Added Really Clean to Directory.build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,4 +6,12 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+
+  <PropertyGroup>
+    <PackageOutputPath>$([System.IO.Path]::Combine($(MSBuildProjectDirectory), 'NuGetOutput'))</PackageOutputPath>
+   </PropertyGroup>
+
+  <Target Name="FreshClean" BeforeTargets="Clean">
+    <RemoveDir Directories="$(PackageOutputPath)"/>
+  </Target>
 </Project>
