--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,7 +8,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <PackageOutputPath>$([System.IO.Path]::Combine($(MSBuildProjectDirectory), 'NuGetOutput'))</PackageOutputPath>
+    <PackageOutputPath>$([System.IO.Path]::Combine($(MSBuildProjectDirectory), 'packages'))</PackageOutputPath>
    </PropertyGroup>
 
   <Target Name="FreshClean" BeforeTargets="Clean">
