--- a/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
+++ b/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
@@ -6,17 +6,17 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Authors>Steve Bush</Authors>
     <Company>BushChang</Company>
-    <Description>Logging Extensions</Description>
+    <Description>PureActive Logging Extensions</Description>
     <PackageLicenseUrl>https://github.com/SteveBush/PureActive/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/SteveBush/PureActive</PackageProjectUrl>
     <RepositoryUrl>https://github.com/SteveBush/PureActive</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>logging, extensions</PackageTags>
-    <PackageReleaseNotes>PureActive.Logging</PackageReleaseNotes>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageTags>PureActive, logging, extensions</PackageTags>
+    <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
     <Copyright>© BushChang Corporation. All rights reserved.</Copyright>
     <PackageIconUrl>https://raw.githubusercontent.com/SteveBush/PureWebAssets/master/icon/PureActive.gif</PackageIconUrl>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>PureActive.Logging.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>PureActive.Logging.Extensions.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
