--- a/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
+++ b/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
@@ -1,24 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <AssemblyOriginatorKeyFile>PureActive.Logging.Extensions.snk</AssemblyOriginatorKeyFile>
     <Authors>SteveBu</Authors>
     <Company>BushChang</Company>
+    <Copyright>© 2018 BushChang Corporation. All rights reserved.</Copyright>
     <Description>PureActive Logging Extensions</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Owners>SteveBu</Owners>
+    <PackageIconUrl>https://raw.githubusercontent.com/SteveBush/PureWebAssets/master/icon/PureActive64.png</PackageIconUrl>
+    <PackageId>PureActive.Logging.Extensions</PackageId>
     <PackageLicenseUrl>https://github.com/SteveBush/PureActive/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/SteveBush/PureActive</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/SteveBush/PureActive</RepositoryUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <PackageTags>PureActive logging extensions</PackageTags>
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
-    <Copyright>© BushChang Corporation. All rights reserved.</Copyright>
-    <PackageIconUrl>https://raw.githubusercontent.com/SteveBush/PureWebAssets/master/icon/PureActive.gif</PackageIconUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>PureActive logging extensions</PackageTags>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/SteveBush/PureActive</RepositoryUrl>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>PureActive.Logging.Extensions.snk</AssemblyOriginatorKeyFile>
-    <PackageId>PureActive.Logging.Extensions</PackageId>
+    <Title>PureActive Logging Extensions</Title>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
@@ -28,7 +31,5 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
-
 
 </Project>
