--- a/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
+++ b/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
@@ -20,6 +20,7 @@
     <SignAssembly>true</SignAssembly>
     <Title>PureActive Logging Extensions</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <NuspecProperties>$(NuspecProperties);owners=SteveBu</NuspecProperties>
   </PropertyGroup>
   
   <ItemGroup>
