--- a/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
+++ b/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
@@ -2,35 +2,17 @@
 
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>PureActive.Logging.Extensions.snk</AssemblyOriginatorKeyFile>
-    <Authors>Steve Bush</Authors>
-    <Company>BushChang</Company>
-    <Copyright>© 2018 BushChang Corporation. All rights reserved.</Copyright>
     <Description>PureActive Logging Extensions</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Owners>SteveBu</Owners>
-    <PackageIconUrl>https://raw.githubusercontent.com/PureActive/PureWebAssets/master/icon/PureActiveLogging256.png</PackageIconUrl>
     <PackageId>PureActive.Logging.Extensions</PackageId>
-    <PackageLicenseUrl>https://github.com/PureActive/PureActive/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/PureActive/PureActive</PackageProjectUrl>
-    <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageTags>PureActive logging extensions</PackageTags>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/PureActive/PureActive</RepositoryUrl>
     <SignAssembly>true</SignAssembly>
-    <Title>PureActive Logging Extensions</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <NuspecProperties>$(NuspecProperties);owners=SteveBu</NuspecProperties>
+    <Title>PureActive Logging Extensions</Title>
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.1.1" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="2.2.13">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <ProjectReference Include="..\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
