--- a/samples/PureActive.Samples.ConsoleApp/PureActive.Samples.ConsoleApp.csproj
+++ b/samples/PureActive.Samples.ConsoleApp/PureActive.Samples.ConsoleApp.csproj
@@ -15,4 +15,11 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Core\PureActive.Core.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Logging.Extensions\PureActive.Logging.Extensions.csproj" />
+  </ItemGroup>
+
 </Project>
