--- a/test/PureActive.Logger.Provider.Serilog.UnitTests/PureActive.Logger.Provider.Serilog.UnitTests.csproj
+++ b/test/PureActive.Logger.Provider.Serilog.UnitTests/PureActive.Logger.Provider.Serilog.UnitTests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PureActive.Logging.Provider.Serilog\PureActive.Logging.Provider.Serilog.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Logger.Provider.Serilog\PureActive.Logger.Provider.Serilog.csproj" />
   </ItemGroup>
 
 </Project>
