--- a/src/PureActive.Logger.Provider.Serilog/PureActive.Logger.Provider.Serilog.csproj
+++ b/src/PureActive.Logger.Provider.Serilog/PureActive.Logger.Provider.Serilog.csproj
@@ -15,7 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AsyncFriendlyStackTrace" Version="1.6.0" />
+    <PackageReference Include="Destructurama.Attributed" Version="2.0.0" />
     <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
