Rename of Xunit product to reflect Serilog dependency

--- a/test/PureActive.Serilog.Sink.Xunit.UnitTests/PureActive.Serilog.Sink.Xunit.UnitTests.csproj
+++ b/test/PureActive.Serilog.Sink.Xunit.UnitTests/PureActive.Serilog.Sink.Xunit.UnitTests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PureActive.Logger.Sink.Xunit\PureActive.Logger.Sink.Xunit.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Serilog.Sink.Xunit\PureActive.Serilog.Sink.Xunit.csproj" />
   </ItemGroup>
 
 </Project>
