--- a/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
+++ b/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>PureActive.Logger.Sink.Xunit.snk</AssemblyOriginatorKeyFile>
-    <Description>PureActive Xunit Logger Sink</Description>
+    <AssemblyOriginatorKeyFile>PureActive.Serilog.Sink.Xunit.snk</AssemblyOriginatorKeyFile>
+    <Description>PureActive Serilog Sink for Xunit</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIconUrl>https://raw.githubusercontent.com/PureActive/PureWebAssets/master/icon/PureActiveLogging256.png</PackageIconUrl>
-    <PackageId>PureActive.Logger.Sink.Xunit</PackageId>
-    <PackageTags>PureActive.Logger.Sink.Xunit</PackageTags>
+    <PackageId>PureActive.Serilog.Sink.Xunit</PackageId>
+    <PackageTags>PureActive.Serilog.Sink.Xunit</PackageTags>
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Title>PureActive Xunit Logger Sink</Title>
+    <Title>PureActive Serilog Sink for Xunit</Title>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
