--- a/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
+++ b/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
@@ -15,11 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AsyncFriendlyStackTrace" Version="1.6.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.1.1" />
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.0.0" />
+    <PackageReference Include="Serilog.Sinks.TestCorrelator" Version="3.0.3" />
     <PackageReference Include="xunit" Version="2.4.0" />
   </ItemGroup>
 
