Added Dependency to PureActive.Archive.Abstractions

--- a/src/PureActive.Archive.Abstractions/PureActive.Archive.Abstractions.csproj
+++ b/src/PureActive.Archive.Abstractions/PureActive.Archive.Abstractions.csproj
@@ -14,4 +14,8 @@
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
