--- a/src/PureActive.Core/PureActive.Core.csproj
+++ b/src/PureActive.Core/PureActive.Core.csproj
@@ -9,7 +9,7 @@
     <PackageTags>PureActive core</PackageTags>
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Title>PureActive Core Libaries</Title>
+    <Title>PureActive Core Libraries</Title>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
