--- a/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
+++ b/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
