Refactoring of Network Service

--- a/src/PureActive.Hosting/PureActive.Hosting.csproj
+++ b/src/PureActive.Hosting/PureActive.Hosting.csproj
@@ -32,6 +32,7 @@
     <ProjectReference Include="..\PureActive.Core\PureActive.Core.csproj" />
     <ProjectReference Include="..\PureActive.Hosting.Abstractions\PureActive.Hosting.Abstractions.csproj" />
     <ProjectReference Include="..\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
+    <ProjectReference Include="..\PureActive.Logging.Extensions\PureActive.Logging.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
