Added test dependency for NetworkServices

--- a/test/PureActive.Network.UnitTests/PureActive.Network.UnitTests.csproj
+++ b/test/PureActive.Network.UnitTests/PureActive.Network.UnitTests.csproj
@@ -16,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\PureActive.Network.Abstractions\PureActive.Network.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Network.Extensions\PureActive.Network.Extensions.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Network.Services\PureActive.Network.Services.csproj" />
   </ItemGroup>
 
 </Project>
