--- a/test/PureActive.Logging.UnitTests/PureActive.Logging.UnitTests.csproj
+++ b/test/PureActive.Logging.UnitTests/PureActive.Logging.UnitTests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Logging.Extensions\PureActive.Logging.Extensions.csproj" />
   </ItemGroup>
 
