--- a/test/PureActive.Network.Devices.UnitTests/PureActive.Network.Devices.UnitTests.csproj
+++ b/test/PureActive.Network.Devices.UnitTests/PureActive.Network.Devices.UnitTests.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Hosting.Abstractions\PureActive.Hosting.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Hosting\PureActive.Hosting.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
