--- a/test/PureActive.Network.Devices.UnitTests/PureActive.Network.Devices.UnitTests.csproj
+++ b/test/PureActive.Network.Devices.UnitTests/PureActive.Network.Devices.UnitTests.csproj
@@ -17,13 +17,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Core\PureActive.Core.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Hosting.Abstractions\PureActive.Hosting.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Hosting\PureActive.Hosting.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Network.Abstractions\PureActive.Network.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Network.Devices\PureActive.Network.Devices.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Network.Extensions\PureActive.Network.Extensions.csproj" />
-    <ProjectReference Include="..\..\src\PureActive.Network.Services\PureActive.Network.Services.csproj" />
   </ItemGroup>
 
 </Project>
