--- a/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
+++ b/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
@@ -14,7 +14,9 @@
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>  </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <Compile Remove="Interfaces\**" />
+    <EmbeddedResource Remove="Interfaces\**" />
+    <None Remove="Interfaces\**" />
   </ItemGroup>
 
   <ItemGroup>
