--- a/src/PureActive.Network.Core/PureActive.Network.Core.csproj
+++ b/src/PureActive.Network.Core/PureActive.Network.Core.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>PureActive.Network.Services.snk</AssemblyOriginatorKeyFile>
-    <Description>PureActive Network Services</Description>
+    <AssemblyOriginatorKeyFile>PureActive.Network.Core.snk</AssemblyOriginatorKeyFile>
+    <Description>PureActive Network Core</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIconUrl>https://raw.githubusercontent.com/PureActive/PureWebAssets/master/icon/PureActiveNetwork256.png</PackageIconUrl>
-    <PackageId>PureActive.Network.Services</PackageId>
-    <PackageTags>PureActive network services</PackageTags>
+    <PackageId>PureActive.Network.Core</PackageId>
+    <PackageTags>PureActive network core</PackageTags>
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Title>PureActive Network Services</Title>
+    <Title>PureActive Network Core</Title>
 
-    <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>  
+    <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,11 +19,9 @@
     <ProjectReference Include="..\PureActive.Core\PureActive.Core.csproj" />
     <ProjectReference Include="..\PureActive.Hosting.Abstractions\PureActive.Hosting.Abstractions.csproj" />
     <ProjectReference Include="..\PureActive.Hosting\PureActive.Hosting.csproj" />
+    <ProjectReference Include="..\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
     <ProjectReference Include="..\PureActive.Network.Abstractions\PureActive.Network.Abstractions.csproj" />
-    <ProjectReference Include="..\PureActive.Network.Core\PureActive.Network.Core.csproj" />
     <ProjectReference Include="..\PureActive.Network.Extensions\PureActive.Network.Extensions.csproj" />
-    <ProjectReference Include="..\PureActive.Network.Services.ArpService\PureActive.Network.Services.ArpService.csproj" />
-    <ProjectReference Include="..\PureActive.Network.Services.PingService\PureActive.Network.Services.PingService.csproj" />
   </ItemGroup>
 
 </Project>
