--- a/src/PureActive.Network.Services.PingService/PureActive.Network.Services.PingService.csproj
+++ b/src/PureActive.Network.Services.PingService/PureActive.Network.Services.PingService.csproj
@@ -24,4 +24,15 @@
     <ProjectReference Include="..\PureActive.Network.Extensions\PureActive.Network.Extensions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Reactive.Testing" Version="4.1.2" />
+    <PackageReference Include="System.Interactive" Version="3.2.0" />
+    <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
+    <PackageReference Include="System.Reactive.Core" Version="4.1.2" />
+    <PackageReference Include="System.Reactive.Interfaces" Version="4.1.2" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.2" />
+    <PackageReference Include="System.Reactive.PlatformServices" Version="4.1.2" />
+  </ItemGroup>
+
 </Project>
