--- a/src/PureActive.Network.Abstractions/PureActive.Network.Abstractions.csproj
+++ b/src/PureActive.Network.Abstractions/PureActive.Network.Abstractions.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\PureActive.Hosting.Abstractions\PureActive.Hosting.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PingService\Extensions\" />
+  </ItemGroup>
+
 </Project>
