--- a/test/PureActive.Core.Reactive.UnitTests/PureActive.Core.Reactive.UnitTests.csproj
+++ b/test/PureActive.Core.Reactive.UnitTests/PureActive.Core.Reactive.UnitTests.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Core.Reactive\PureActive.Core.Reactive.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Core\PureActive.Core.csproj" />
+  </ItemGroup>
+
 </Project>
