Fixed Warnings and updated project references

--- a/src/PureActive.Network.Services.ArpService/PureActive.Network.Services.ArpService.csproj
+++ b/src/PureActive.Network.Services.ArpService/PureActive.Network.Services.ArpService.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\PureActive.Core\PureActive.Core.csproj" />
     <ProjectReference Include="..\PureActive.Hosting.Abstractions\PureActive.Hosting.Abstractions.csproj" />
     <ProjectReference Include="..\PureActive.Hosting\PureActive.Hosting.csproj" />
+    <ProjectReference Include="..\PureActive.Logger.Provider.Serilog\PureActive.Logger.Provider.Serilog.csproj" />
     <ProjectReference Include="..\PureActive.Network.Abstractions\PureActive.Network.Abstractions.csproj" />
     <ProjectReference Include="..\PureActive.Network.Core\PureActive.Network.Core.csproj" />
     <ProjectReference Include="..\PureActive.Network.Extensions\PureActive.Network.Extensions.csproj" />
