--- a/test/PureActive.Network.Services.DhcpService.UnitTests/PureActive.Network.Services.DhcpService.UnitTests.csproj
+++ b/test/PureActive.Network.Services.DhcpService.UnitTests/PureActive.Network.Services.DhcpService.UnitTests.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\PureActive.Hosting.Abstractions\PureActive.Hosting.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Hosting\PureActive.Hosting.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Logger.Provider.Serilog\PureActive.Logger.Provider.Serilog.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Network.Abstractions\PureActive.Network.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Network.Devices\PureActive.Network.Devices.csproj" />
