Updated GitVersioning Package

--- a/src/PureActive.Archive.Abstractions/PureActive.Archive.Abstractions.csproj
+++ b/src/PureActive.Archive.Abstractions/PureActive.Archive.Abstractions.csproj
@@ -14,4 +14,11 @@
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
