--- a/src/PureActive.Archive/PureActive.Archive.csproj
+++ b/src/PureActive.Archive/PureActive.Archive.csproj
@@ -18,4 +18,11 @@
     <ProjectReference Include="..\PureActive.Archive.Abstractions\PureActive.Archive.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
