--- a/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
+++ b/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
@@ -24,4 +24,11 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
