--- a/src/PureActive.Hosting/PureActive.Hosting.csproj
+++ b/src/PureActive.Hosting/PureActive.Hosting.csproj
@@ -44,4 +44,11 @@
     <ProjectReference Include="..\PureActive.Queue.Hangfire\PureActive.Queue.Hangfire.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
