--- a/src/PureActive.Network.Services.PingService/PureActive.Network.Services.PingService.csproj
+++ b/src/PureActive.Network.Services.PingService/PureActive.Network.Services.PingService.csproj
@@ -36,4 +36,11 @@
     <PackageReference Include="System.Reactive.PlatformServices" Version="4.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
