--- a/test/PureActive.Email.UnitTests/PureActive.Email.UnitTests.csproj
+++ b/test/PureActive.Email.UnitTests/PureActive.Email.UnitTests.csproj
@@ -20,4 +20,11 @@
     <ProjectReference Include="..\..\src\PureActive.Email.Office365\PureActive.Email.Office365.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
