--- a/test/PureActive.Hosting.UnitTests/PureActive.Hosting.UnitTests.csproj
+++ b/test/PureActive.Hosting.UnitTests/PureActive.Hosting.UnitTests.csproj
@@ -22,4 +22,11 @@
     <ProjectReference Include="..\..\src\PureActive.Hosting\PureActive.Hosting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
