--- a/test/PureActive.Network.Services.DhcpService.UnitTests/PureActive.Network.Services.DhcpService.UnitTests.csproj
+++ b/test/PureActive.Network.Services.DhcpService.UnitTests/PureActive.Network.Services.DhcpService.UnitTests.csproj
@@ -31,4 +31,11 @@
     <ProjectReference Include="..\..\src\PureActive.Serilog.Sink.Xunit\PureActive.Serilog.Sink.Xunit.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
