--- a/src/PureActive.Email.Office365/PureActive.Email.Office365.csproj
+++ b/src/PureActive.Email.Office365/PureActive.Email.Office365.csproj
@@ -18,4 +18,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="2.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
