--- a/src/PureActive.Logger.Provider.Serilog/PureActive.Logger.Provider.Serilog.csproj
+++ b/src/PureActive.Logger.Provider.Serilog/PureActive.Logger.Provider.Serilog.csproj
@@ -38,4 +38,11 @@
     <ProjectReference Include="..\PureActive.Logging.Extensions\PureActive.Logging.Extensions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
