--- a/src/PureActive.Logging.Abstractions/PureActive.Logging.Abstractions.csproj
+++ b/src/PureActive.Logging.Abstractions/PureActive.Logging.Abstractions.csproj
@@ -22,4 +22,11 @@
     <ProjectReference Include="..\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
