--- a/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
+++ b/src/PureActive.Logging.Extensions/PureActive.Logging.Extensions.csproj
@@ -19,5 +19,12 @@
     <ProjectReference Include="..\PureActive.Core\PureActive.Core.csproj" />
     <ProjectReference Include="..\PureActive.Logging.Abstractions\PureActive.Logging.Abstractions.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
