--- a/src/PureActive.Network.Abstractions/PureActive.Network.Abstractions.csproj
+++ b/src/PureActive.Network.Abstractions/PureActive.Network.Abstractions.csproj
@@ -25,4 +25,11 @@
     <Folder Include="PingService\Extensions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
