--- a/src/PureActive.Network.Extensions/PureActive.Network.Extensions.csproj
+++ b/src/PureActive.Network.Extensions/PureActive.Network.Extensions.csproj
@@ -20,4 +20,11 @@
     <ProjectReference Include="..\PureActive.Network.Abstractions\PureActive.Network.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
