--- a/src/PureActive.Network.Services.ArpService/PureActive.Network.Services.ArpService.csproj
+++ b/src/PureActive.Network.Services.ArpService/PureActive.Network.Services.ArpService.csproj
@@ -26,4 +26,11 @@
     <ProjectReference Include="..\PureActive.Network.Extensions\PureActive.Network.Extensions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
