--- a/src/PureActive.Network.Services/PureActive.Network.Services.csproj
+++ b/src/PureActive.Network.Services/PureActive.Network.Services.csproj
@@ -25,4 +25,11 @@
     <ProjectReference Include="..\PureActive.Network.Services.PingService\PureActive.Network.Services.PingService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
