--- a/src/PureActive.Queue.Hangfire/PureActive.Queue.Hangfire.csproj
+++ b/src/PureActive.Queue.Hangfire/PureActive.Queue.Hangfire.csproj
@@ -27,4 +27,11 @@
     <ProjectReference Include="..\PureActive.Core\PureActive.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
