--- a/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
+++ b/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
@@ -31,4 +31,11 @@
     <ProjectReference Include="..\PureActive.Logging.Extensions\PureActive.Logging.Extensions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
